--- a/jdc_backend/package.json
+++ b/jdc_backend/package.json
@@ -13,6 +13,7 @@
         "egg-mysql": "^3.0.0",
         "egg-redis": "^2.4.0",
         "egg-scripts": "^2.11.0",
+        "egg-websocket-plugin": "^1.0.1",
         "lodash": "^4.17.21"
     },
     "devDependencies": {
