--- a/jdc_flutter/pubspec.yaml
+++ b/jdc_flutter/pubspec.yaml
@@ -35,8 +35,7 @@ dependencies:
     sprintf: ^6.0.0
     webview_flutter: ^3.0.0
     webview_cookie_manager: ^2.0.6
-    logger: ^1.1.0
-    webview_windows: ^0.1.0
+    web_socket_channel: ^2.1.0
 
 dev_dependencies:
     build_runner: ^2.0.1
